<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="back">back</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enable">Enable</string>
</resources>
