<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_detail_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?colorPrimary"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingTop="@dimen/status_bar_height"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_back"
            android:padding="16dp"
            android:tint="?titleColor"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"/>

        <TextView
            android:id="@+id/content_detail_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center_vertical|start"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColor="?titleColor"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold"
            tools:text="Lorem ipsum"/>

    </LinearLayout>

</LinearLayout>
